--- a/public/index.html
+++ b/public/index.html
@@ -153,7 +153,7 @@ window.addEventListener('scroll', () => {
 <script src="/js/js/bootstrap-datepicker.js"></script>
 <script src="/js/js/jquery.timepicker.min.js"></script>
 <script src="/js/js/scrollax.min.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=#&sensor=false"></script>
 <script src="/js/js/google-map.js"></script>
 <script src="/js/js/main.js"></script>
 
